pielang/src/snapshots/pielang__test__check_synthesize_(the (-> Nat Nat) (lambda (x) ((the (-> Atom Nat) (lambda (y) (add1 x))) 'a))).snap
---
source: pielang/src/test.rs
description: "(the (-> Nat Nat) (lambda (x) ((the (-> Atom Nat) (lambda (y) (add1 x))) 'a)))"
expression: output
---
type: (→ Nat Nat)
expr: (λ (x) (add1 x))
