pielang/src/snapshots/pielang__test__check_synthesize_(the (-> Nat Nat) (lambda (x) ((the (-> Atom Nat) (lambda (y) 0)) 'a))).snap
---
source: pielang/src/test.rs
description: "(the (-> Nat Nat) (lambda (x) ((the (-> Atom Nat) (lambda (y) 0)) 'a)))"
expression: output
---
type: (→ Nat Nat)
expr: (λ (x) 0)
