pielang/src/snapshots/pielang__test__check_synthesize_(the (Pair Nat Atom) (cons 0 'a)).snap
---
source: pielang/src/test.rs
description: "(the (Pair Nat Atom) (cons 0 'a))"
expression: output
---
type: (Pair Nat Atom)
expr: (cons 0 'a)
