pielang/src/snapshots/pielang__test__check_synthesize_(the (→ Absurd Nat) (λ (nope) (ind-Absurd (the Absurd nope) Nat))).snap
---
source: pielang/src/test.rs
description: (the (→ Absurd Nat) (λ (nope) (ind-Absurd (the Absurd nope) Nat)))
expression: output
---
type: (→ Absurd Nat)
expr: (λ (nope) (ind-Absurd nope Nat))
