pielang/src/snapshots/pielang__test__check_synthesize_(the (→ Nat Nat Nat) (λ (x y) x)).snap
---
source: pielang/src/test.rs
description: (the (→ Nat Nat Nat) (λ (x y) x))
expression: output
---
type: (→ Nat Nat Nat)
expr: (λ (x y) x)
