pielang/src/snapshots/pielang__test__check_synthesize_(the (→ Nat Nat) (λ (x) (add1 x))).snap
---
source: pielang/src/test.rs
description: (the (→ Nat Nat) (λ (x) (add1 x)))
expression: output
---
type: (→ Nat Nat)
expr: (λ (x) (add1 x))
