pielang/src/snapshots/pielang__test__check_synthesize_(the (→ Nat Nat) (λ (x) x)).snap
---
source: pielang/src/test.rs
description: (the (→ Nat Nat) (λ (x) x))
expression: output
---
type: (→ Nat Nat)
expr: (λ (x) x)
