pielang/src/snapshots/pielang__test__check_synthesize_(the 0 'a).snap
---
source: pielang/src/test.rs
description: "(the 0 'a)"
expression: output
---
error: 0 is not a type
