pielang/src/snapshots/pielang__test__check_synthesize_(the Absurd 0).snap
---
source: src/test.rs
description: (the Absurd 0)
expression: output
---
error: expect a `Absurd`, but get `Nat`
