pielang/src/snapshots/pielang__test__check_synthesize_(the Atom 'a).snap
---
source: src/test.rs
description: "(the Atom 'a)"
expression: "format!(\"type: {}\\nexpr: {}\\n\", dpp(&ty, &env), dpp(&e_o, &env))"
---
type: Atom
expr: 'a
