pielang/src/snapshots/pielang__test__check_synthesize_(the Atom zero).snap
---
source: pielang/src/test.rs
description: (the Atom zero)
expression: output
---
error: Expected Atom but given Nat
